# quizzle

./: Makefile  README.md  pyproject.toml
brain_games/: game_logic.py
brain_games/games/: calc.py  even.py  gcd.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
quizzle_games/: cli.py  game_logic.py
quizzle_games/games/: prime.py  progression.py
quizzle_games/scripts/: quizzle_calc.py  quizzle_even.py  quizzle_games.py  quizzle_gcd.py  quizzle_prime.py  quizzle_progression.py
