[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["himetik <himetik@tutamail.com>"]
readme = "README.md"
packages = [
  { include = "quizzle_games" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
quizzle-games = "quizzle_games.scripts.quizzle_games:main"
quizzle-even = "quizzle_games.scripts.quizzle_even:main"
quizzle-calc = "quizzle_games.scripts.quizzle_calc:main"
quizzle-gcd = "quizzle_games.scripts.quizzle_gcd:main"
quizzle-progression = "quizzle_games.scripts.quizzle_progression:main"
quizzle-prime = "quizzle_games.scripts.quizzle_prime:main"
